subdir('x3daudio1_0')
subdir('x3daudio1_1')
subdir('x3daudio1_2')
subdir('x3daudio1_3')
subdir('x3daudio1_4')
subdir('x3daudio1_5')
subdir('x3daudio1_6')
subdir('x3daudio1_7')
subdir('xactengine3_0')
subdir('xactengine3_1')
subdir('xactengine3_2')
subdir('xactengine3_3')
subdir('xactengine3_4')
subdir('xactengine3_5')
subdir('xactengine3_6')
subdir('xactengine3_7')
subdir('xapofx1_1')
subdir('xapofx1_2')
subdir('xapofx1_3')
subdir('xapofx1_4')
subdir('xapofx1_5')
subdir('xaudio2_0')
subdir('xaudio2_1')
subdir('xaudio2_2')
subdir('xaudio2_3')
subdir('xaudio2_4')
subdir('xaudio2_5')
subdir('xaudio2_6')
subdir('xaudio2_7')
subdir('xaudio2_8')
subdir('xaudio2_9')
subdir('xaudio2_7/tests')
